--- a/css/home.css
+++ b/css/home.css
@@ -31,20 +31,21 @@ font-size: 20px;
 column-count: 3;
   column-gap: 40px;
 }
-
-.navbar{
-  
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration:none;
-    font-size: 30px;
-    
-    
+.header{
+ 
+border: 2px  black;  text-align: center;
+ 
+    font-size: 90px;
+   
+    width: 700px;
+    background-color: #4caf8d61;
+}
+.header a{
+    color: white;
+    text-decoration: none;
 }
 
-ul {
+/*ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -56,18 +57,35 @@ li {
   float: left;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
 li a:hover:not(.active) {
   background-color: #111;
-}
+}*/
 
 .active {
   background-color: #4CAF50;
+   float: right;
+}
+a:hover:not(.active) {
+  background-color: #111;
+}
+
+.navbar{
+  padding: 0;
+    margin: 10px;
+  background-color: #333;
+    
+    overflow: hidden;
+}
+.navbar a{
+  
+  color: white;
+  text-align:center;
+  padding: 1px 10px 10px;
+  text-decoration: none;
+
+    
+}
+
+.navbar a:hover{
+    color:darkgray;
 }
