--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,10 @@
 #Box{ 
 background-color: grey;
-  width: 1200px;
-    height: 450px;
+  width: 60%;
+    height: 30%;
   border: 15px;
   padding-top: 2px;
-    margin: 300px 600px 200px 350px;
+    margin: 20%;
     text-align: center;
     font-size: 30px ;
     color: white;
@@ -13,15 +13,15 @@ background-color: grey;
 
 #bar{
     background-color: white;
-  width: 800px;
-    height: 50px;
+  width: 60%;
+    height: 50%;
     font-size: 23px;
     padding-top: 20px;
-    align-content: center;
-    
+    align-content: center;    
   color: black;
-  margin-left: 200px;
+  margin-left: 20%;
 }
+
 p{color: white;
 font-size: 30px;
 }
@@ -31,14 +31,14 @@ font-size: 20px;
 column-count: 3;
   column-gap: 40px;
 }
-.header{
- 
-border: 2px  black;  text-align: center;
- 
-    font-size: 90px;
 
+.header{
+ border: 2px  black;  text-align: center;
+    font-size: 90px;
     background-color: #4caf8d61;
+    width: 100%;
 }
+
 .header a{
     color: white;
     text-decoration: none;
@@ -72,7 +72,7 @@ a:hover:not(.active) {
   padding: 0;
     margin: 10px;
   background-color: #333;
-    
+    width: 100%;
     overflow: hidden;
 }
 .navbar a{
@@ -87,4 +87,35 @@ a:hover:not(.active) {
 
 .navbar a:hover{
     color:darkgray;
+}
+#about{
+ background-color: #44715dd6;
+  width: 60%;
+    height: 400px;
+  border: 15px solid #83568e70;
+    margin-left: 4%;
+    text-align: center;
+    font-size: 10px ;
+    color: white;
+
+}
+#about img{
+    
+    float: right;
+    width: 20%;
+    height: 50%;
+    margin: 1%;
+      object-fit: cover;
+}
+#about h2{
+    margin: auto;
+  width: 60%;
+    background-color: #83568e70;
+  padding: 10px;
+    
+    font-size: 30px;
+}
+#head{
+    border: 20px solid #83568e70;
+    text-align: center
 }
