--- a/css/home.css
+++ b/css/home.css
@@ -92,7 +92,7 @@ a:hover:not(.active) {
  background-color: #44715dd6;
   width: 60%;
     height: 400px;
-  border: 15px solid #83568e70;
+  border: 15px thin #44715dd6;
     margin-left: 4%;
     text-align: center;
     font-size: 10px ;
