--- a/css/home.css
+++ b/css/home.css
@@ -34,6 +34,7 @@ ul{
     overflow: hidden;
 }
 li a{
+    display: block;
 color: white;
     font-size: 20px;
   text-align: center;
@@ -258,3 +259,19 @@ a span:nth-child(4){
     }
 }
 */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  
+  padding: 1%;
+margin-left: 20%;
+margin-right: 20%;
+    height: 60%;
+}
+.grid-item {
+  background-color: #e0caba;
+  border: 1px solid black;
+  font-size: 30px;
+  text-align: center;
+}
