--- a/css/op.css
+++ b/css/op.css
@@ -4,6 +4,10 @@ color:white;
 font-weight: bold;
 font-size: 30px;
     }
+h1{
+    font-size: 40px;
+    text-decoration:underline;
+}
 
 
 #first-para{
@@ -29,7 +33,7 @@ background-color: lightgrey;
     background-color: cadetblue;
     height: 175px;
     width: 500px;
-    border: 3px solid aqua;
+    border: 3px;
     padding: 25px;
     margin-left: 20px;
     overflow: hidden;
@@ -54,10 +58,12 @@ padding: 10px 10px;
 margin-left: 100px;
 }
 
-p{
+p{ font-weight: bold;
     margin-left: 30px;
     margin-right: 30px;
     color:darksalmon;
+    font-size: 20px;
+    font-family: serif;
 }
 
 
