--- a/css/heading.css
+++ b/css/heading.css
@@ -18,14 +18,15 @@
 .header a{
     color: white;
     text-decoration: none;
+    
 }
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-/*body{
+body{
     display: flex;
     justify-content: center;
     align-items: center;
