--- a/css/home.css
+++ b/css/home.css
@@ -1,35 +1,40 @@
 #Box{ 
 background-color: grey;
   width: 60%;
-    height: 30%;
+    height: 60%;
   border: 15px;
   padding-top: 2px;
     margin: 20%;
     text-align: center;
-    font-size: 30px ;
+    
     color: white;
     opacity:0.7;
+}
+#Box h1{
+    padding: 1%;
+  font-size: 50px ;  
 }
 
 
 
 p{color: white;
-font-size: 30px;
+font-size: 27px;
 }
 
 ul{
  list-style-type: none;
-  margin-left: 20%;
+    margin-left:25%;
     margin-right: 10%;
+    margin-top: 5%;
   padding: 0;
-    overflow: hidden;
+    height: 100px;
 }
-li a{
+li {
     display: block;
 color: white;
     font-size: 20px;
   text-align: center;
-  padding: 10px;  
+  padding: 0;  
     margin-left: ;
   text-decoration: none;
 }
@@ -93,8 +98,12 @@ a:hover:not(.active) {
 
 
 
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
+    
 
-
+}
 
 
 
@@ -126,3 +135,123 @@ margin-right: 20%;
 .grid-item a {
     text-decoration: none;
 }
+
+/*
+new css
+*/
+
+
+
+#scroll-animate
+{
+  overflow: hidden;
+}
+
+#scroll-animate-main
+{
+  width: 100%;
+  left: 0;
+  position: fixed;
+}
+
+#heightPage,
+#heightScroll
+{
+  width: 10px;
+  top: 0;
+  position: absolute;
+  z-index: 99;
+}
+
+#heightPage
+{
+  left: 0;
+}
+
+#heightScroll
+{
+  right: 0;
+}
+
+.header
+{
+  width: 100%;
+  height: 100%;
+  background: url(https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg) no-repeat 50% 50%;
+  top: 0;
+  z-index: -1;
+}
+
+footer{
+  width: 100%;
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  bottom: -300px;
+  z-index: -1;
+    overflow: hidden;
+    padding: 1%;
+}
+
+.grid-container
+{
+  height: 1000px;
+  min-height: 1000px;
+  background: #ededed;
+  position: relative;
+  z-index: 1;
+}
+
+.wrapper-parallax {
+  margin-top: 10%;
+  margin-bottom: 300px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+
+h1{
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 150px;
+  color: #fff;
+}
+
+.header h1{}
+
+.grid-container h1{
+  line-height: 1000px;
+  color: #999;
+}
+
+footer h1,p
+{
+  font-size: 30px;
+}
+
+header,
+footer,
+#scroll-animate-main
+{
+  -webkit-transition-property: all;
+     -moz-transition-property: all;
+      transition-property: all;
+
+  -webkit-transition-duration: 0.4s;
+     -moz-transition-duration: 0.4s;
+      transition-duration: 0.4s;
+
+  -webkit-transition-timing-function: cubic-bezier(0, 0, 0, 1);
+     -moz-transition-timing-function: cubic-bezier(0, 0, 0, 1);
+      transition-timing-function: cubic-bezier(0, 0, 0, 1);
+}
+
+
+footer{
+    color:white;
+    font-size: 30px;
+}
+
+
