--- a/css/heading.css
+++ b/css/heading.css
@@ -8,6 +8,12 @@
   color: black;
   margin-left: 20%;
 }
+
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
+}
+
 .header{
  border: 2px  black;  text-align: center;
     font-size: 30px;
