--- a/css/bout.css
+++ b/css/bout.css
@@ -122,7 +122,7 @@ p {
 
 .close-content {
   display: block;
-  position: absolute;
+  position: fixed;
   right: 12px;
   top: 12px;
   width: 30px;
