--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,9 @@
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
+}
+
+
 #Box{ 
 background-color: grey;
   width: 60%;
