--- a/css/contact1.css
+++ b/css/contact1.css
@@ -6,7 +6,7 @@ body {
     display: grid;
     justify-content: center;
     height: 100%;
-  }
+    background-repeat: no-repeat;  }
   .contact {
       align-self: center;}
  .contact i {
@@ -37,10 +37,10 @@ body {
       width: 100%;
       outline: none;
       border: none;
-      text-transform: uppercase;
+      
       letter-spacing: 2px;
       font-size: 11px;
-      padding-left: 15px;
+      /*padding-left: 15px;*/
       height: 44px;
       border-radius: 0;
     }
@@ -52,7 +52,7 @@ body {
       text-transform: uppercase;
       letter-spacing: 2px;
       font-size: 11px;
-      padding: 15px;
+      /*padding: 15px;*/
       height: 218px;
       border-radius: 0;
     }
