--- a/css/home.css
+++ b/css/home.css
@@ -1,24 +1,35 @@
 body {
-    background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
+    background-color: black;
 }
 
 
 #Box{ 
-background-color: grey;
+background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
   width: 60%;
-    height: 60%;
+    height: 20%;
   border: 15px;
-  padding-top: 2px;
-    margin: 20%;
+  padding-top: 20px;
+    margin:20%;
     text-align: center;
-    
     color: white;
-    opacity:0.7;
+    opacity:0.9;
 }
 #Box h1{
-    padding: 1%;
+    padding: 2%;
+    margin-top: 20px;
   font-size: 50px ;  
+}
+
+#bar{
+    background-color: white;
+  width: 70%;
+    height: 50%;
+    font-size: 23px;
+    padding-top: 20px;
+    align-content: center;    
+  color: black;
+  margin-left: 20%;
 }
 
 
@@ -139,7 +150,9 @@ new css
 {
   width: 100%;
   height: 100%;
-  background: url(https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg) no-repeat 50% 50%;
+  background-image: url(../Images/back1.jfif);
+    background-repeat: no-repeat;
+    background-size: contain;
   top: 0;
   z-index: -1;
 }
@@ -168,7 +181,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
   margin-top: 10%;
   margin-bottom: 200px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+background-image: url(../Images/back2.jfif);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
+
 
  h1{
   width: 100%;
@@ -178,7 +195,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
   text-transform: uppercase;
   text-align: center;
   font-family: Helvetica;
-  font-size: 150px;
+  font-size: 80px;
   color: #fff;
 }
 
