--- a/css/contact1.css
+++ b/css/contact1.css
@@ -2,11 +2,12 @@ $btnBackground: rgba(0, 0, 0, 0.7);
 html {
     height: 100%;}
 body {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(https://unsplash.it/1920/1080?image=871) fixed;
+   background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(77,106,140,1) 100%);
     display: grid;
     justify-content: center;
     height: 100%;
-    background-repeat: no-repeat;  }
+     }
   .contact {
       align-self: center;}
  .contact i {
@@ -26,7 +27,12 @@ body {
       padding-left: 50px;
       text-align: center;
     }
-  }
+  
+.buttons{
+    font-weight: bold;
+}
+
+
 #contactform {
     height: 215px;}
 .right {
