--- a/css/heading.css
+++ b/css/heading.css
@@ -5,7 +5,7 @@
 .header{
  border: 2px  black;  text-align: center;
     font-size: 30px;
-    /*background-color: #4caf8d61*/;
+    background-color: #4caf8d61;
     width: 100%;
     
 }
