--- a/css/specs.css
+++ b/css/specs.css
@@ -16,3 +16,11 @@ img{
 body{
     color:white;
 }
+aside {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: lightgray;
+}
