--- a/css/bout.css
+++ b/css/bout.css
@@ -3,14 +3,36 @@
 */
 
 body {
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(77,106,140,1) 100%);
 
-    background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
+    /*background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);*/
   /*background: #150f21;*/
   font-size: 18px;
    
 }
+.navbar{
+    text-align: center;
+    
+}
 
+.buttons{
+    font-weight: bold;
+}
+h2 {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 2.5em;
+      border: 1px solid #555;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding-top: 20px;
+      height: 75px;
+      color: #fff;
+      font-weight: 500;
+      line-height: 40px;
+      padding-left: 50px;
+      text-align: center;
+    }
 p {
   line-height: 1.5;
 }
