--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,16 @@
 body {
-    background-color: black;
+   background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(77,106,140,1) 100%);
 }
 
 
 #Box{ 
 background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba(48,14,87,1) 100%);
-  width: 60%;
-    height: 20%;
-  border: 15px;
-  padding-top: 20px;
-    margin:20%;
-    text-align: center;
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  margin: auto;
+  width: 50%;
+  border: 3px thin;
+  padding: 10px;
     color: white;
     opacity:0.9;
 }
@@ -32,10 +31,34 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,27,12,1) 34%, rgba
   margin-left: 20%;
 }
 
+section{
+    padding: px;
+}
+
+aside {
+  /*height: 650px;
+    width: 220px;*/
+    margin: auto;
+  width: 160px;
+    height: 425px;
+  border: 1px thin;
+  padding: 1%;
+  float: left;
+  font-style: italic;
+  background-color: mediumslateblue;
+    color: white;
+    overflow: hidden;
+    font-size: 25px;
+}
+iframe{
+    float: right;
+    height: 500px;
+    width: 220px;
+}
 
 
 p{color: white;
-font-size: 27px;
+font-size: 20px;
 }
 
 ul{
@@ -150,9 +173,10 @@ new css
 {
   width: 100%;
   height: 100%;
-  background-image: url(../Images/back1.jfif);
+  background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
   top: 0;
   z-index: -1;
 }
@@ -170,8 +194,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
 
 .wrapper
 {
-  height: 1000px;
-  min-height: 1000px;
+  height: 800px;
+  min-height: 800px;
   
   position: relative;
   z-index: 1;
@@ -181,7 +205,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
   margin-top: 10%;
   margin-bottom: 200px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-background-image: url(../Images/back2.jfif);
+background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -330,7 +355,8 @@ footer{
 	-moz-transform: rotateX(0deg) rotateY(0deg);
 }
 .box1{
-	background-color: #14bcc8;
+	background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 	width: 250px;
 	height: 450px;
 	margin: 0 auto;
@@ -345,7 +371,8 @@ footer{
     height:80%%;
 }
 .box2{
-	background-color: #ff7e70;
+	background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 	width: 250px;
 	height: 450px;
 	margin: 0 auto;
