--- a/css/op.css
+++ b/css/op.css
@@ -39,7 +39,7 @@ background-color: lightgrey;
     overflow: hidden;
     }
     
-        img {
+        /*img {
     float: center;
         }
     
@@ -56,7 +56,7 @@ padding: 10px 10px;
 
 .images{
 margin-left: 100px;
-}
+}*/
 
 p{ 
     margin-left: 30px;
