--- a/css/contact1.css
+++ b/css/contact1.css
@@ -9,7 +9,11 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(77,106,140,1) 1
     height: 100%;
      }
   .contact {
-      align-self: center;}
+      align-self: center;
+      width: 500px;
+      height: 500px;
+
+}
  .contact i {
       padding: 0 20px;
       font-size: 0.8em;
